backend/service-consolidator-bmiapps-proxy-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-bmiapps-proxy-v1
  namespace: testwf
spec:
  externalName: bmiteststrg.z20.web.core.windows.net
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  sessionAffinity: None
  type: ExternalName
status:
  loadBalancer: {}
